// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users reducer should CREATE_USER_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isCreateError": false,
  "isCreatePending": false,
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": Object {
    "user": "test",
  },
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should CREATE_USER_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isCreateError": false,
  "isCreatePending": true,
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should CREATE_USER_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isCreateError": true,
  "isCreatePending": false,
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USER_ROLES_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "userRoles": Object {},
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USER_ROLES_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USER_ROLES_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USERS_BY_ID_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": Object {},
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USERS_BY_ID_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isCreateError": false,
  "isError": false,
  "isPending": true,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USERS_BY_ID_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USERS_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Object {},
  "usersCount": 10,
}
`;

exports[`users reducer should GET_USERS_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isCreateError": false,
  "isError": false,
  "isPending": true,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should GET_USERS_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should REMOVE_USER_FULFILLED 1`] = `
Object {
  "deletedUser": null,
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should REMOVE_USER_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should REMOVE_USER_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should RESET_DELETED_USER 1`] = `
Object {
  "deletedUser": "",
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should UPDATE_USER_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": true,
  "user": Object {},
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should UPDATE_USER_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "isUpdatePending": true,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should UPDATE_USER_REJECTED 1`] = `
Object {
  "errorMessage": "Something went wrong!",
  "isError": true,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "user": null,
  "userList": Array [],
  "usersCount": 0,
}
`;

exports[`users reducer should return the initial state 1`] = `
Object {
  "deletedUser": "",
  "errorMessage": "",
  "isCreateError": false,
  "isCreatePending": false,
  "isError": false,
  "isPending": false,
  "isUpdatePending": false,
  "isUserUpdated": false,
  "sortField": "email",
  "sortOrder": "asc",
  "sortValue": "email",
  "user": null,
  "userList": Array [],
  "userRoles": Array [],
  "usersCount": 0,
}
`;
